--- a/test/browser.css
+++ b/test/browser.css
@@ -15,14 +15,49 @@ body {
     font-style: italic;
 }
 
-.section {
-    color: #fff;
-    margin-top: 1.5rem;
+.logDiv {
+    overflow: auto;
+    background-color: #0a3756;
+    border: 1px solid #00f;
+    border-radius: 7px;
+    margin: 16px 0;
+    padding: 0px 0 1rem 1rem;
 }
 
+.section {
+    color: #fff;
+    margin-top: 1rem;
+}
+
+.logLine {
+    font-size: 0.9rem;
+}
+.logLine.ref {
+    color: #bbb;
+}
 .logLine.warning {
     color: #dea166;
 }
+.logLine.better {
+    color: #0288e2;
+}
 .logLine.super {
     color: #0ebc51;
+}
+
+::-webkit-scrollbar {
+	-webkit-appearance: none;
+	width: 7px;
+	height: 7px;
+}
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0, 0.2);
+	-webkit-border-radius: 10px;
+	border-radius: 7px;
+	margin: 1px;
+}
+::-webkit-scrollbar-thumb {
+	border-radius: 7px;
+	background-color: rgba(0,0,0, 0.5);
+	-webkit-box-shadow: 0 0 1px rgba(255,255,255, 0.5);
 }
